# super-swarm-cpp

./: CMakeLists.txt  Readme.md
include/: bird.h  bird_swarm.h  config.h  slider.h  swarming.h  utils.h  weight_slider.h
src/: CMakeLists.txt  main.cpp
src/bird/: CMakeLists.txt  bird.cpp
src/bird_swarm/: CMakeLists.txt  bird_swarm.cpp
src/slider/: CMakeLists.txt  slider.cpp
src/swarming/: CMakeLists.txt  swarming.cpp
src/utils/: CMakeLists.txt  utils.cpp
src/weight_slider/: CMakeLists.txt  weight_slider.cpp
tests/: CMakeLists.txt  test_bird.cpp  test_slider.cpp  test_swarming.cpp  test_utils.cpp
